--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,10 +1,13 @@
 <h2>Product Details</h2>
 
-<div *ngIf="product">
-	<h3>{{ product.name }}</h3>
-	<h4>{{ product.price | currency }}</h4>
-	<p>{{ product.description }}</p>
+<div *ngIf="productFound">
+  <h3>{{ product.name }}</h3>
+  <h4>{{ product.price | currency }}</h4>
+  <p>{{ product.description }}</p>
 
-	<button (click)="addToCart(product)">Buy</button>
+  <button (click)="addToCart(product)">Buy</button>
+</div>
 
+<div *ngIf="!productFound">
+  <p>Product not found :(</p>
 </div>
