--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,21 +1,21 @@
 <h2>Products</h2>
 
-<div *ngFor="let product of products">
-
-	<h3>
-		<a [title]="product.name + ' details'" [routerLink]="['/products', product.id]">
+<div *ngFor="let product of productsService.products$ | async">
+  <h3>
+    <a
+      [title]="product.name + ' details'"
+      [routerLink]="['/products', product.id]"
+    >
       {{ product.name }}
     </a>
-	</h3>
+  </h3>
 
-	<p *ngIf="product.description">
-		Description: {{ product.description }}
-	</p>
+  <p *ngIf="product.description">Description: {{ product.description }}</p>
 
-	<button (click)="share()">
+  <button (click)="share()">
     Share
   </button>
 
-	<app-product-alerts [product]="product" (notify)="onNotify()">
-	</app-product-alerts>
+  <app-product-alerts [product]="product" (notify)="onNotify()">
+  </app-product-alerts>
 </div>
