--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,17 +1,11 @@
 <a [routerLink]="['/']">
-	<h1>My Store</h1>
+  <h1>My Store</h1>
 </a>
 
 <a [routerLink]="['/cart']" class="button fancy-button">
-	<i class="material-icons">shopping_cart </i>
+  <i class="material-icons">shopping_cart </i>
   Checkout
-  <ng-container *ngIf="getCartSize() > 0">
-    ({{ getCartSize() }})
+  <ng-container *ngIf="!(cart.isEmpty$ | async)">
+    ({{ cart.cartSize$ | async }})
   </ng-container>
 </a>
-
-<!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
